# rs-alias-manager

./: .gitignore  Cargo.toml  LICENSE  README-CN.md  README.md  Trunk.toml  clippy.toml  index.html  rustfmt.toml  style.css
.github/workflows/: release.yml
docs/: CODE_STYLE.md  architecture.md  class-diagram.mermaid  prd.md  sequence-diagram.mermaid
src/: app.rs  i18n.rs  main.rs  utils.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  clippy.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: alias_cmds.rs  mod.rs  settings_cmds.rs  template_cmds.rs  update_cmds.rs
src-tauri/src/models/: alias.rs  mod.rs  shell_type.rs  template.rs
src-tauri/src/services/: alias_parser.rs  app_settings.rs  mod.rs  safe_writer.rs  shell_config.rs  template_library.rs  templates.json  update_checker.rs
src/api/: commands.rs  mod.rs
src/components/: alias_form.rs  alias_list.rs  mod.rs  search_bar.rs  settings_form.rs  sidebar.rs  template_category_tabs.rs  template_list.rs
src/pages/: alias_page.rs  mod.rs  settings_page.rs  template_page.rs
src/state/: app_state.rs  mod.rs
