[package]
name = "rs-alias-manager-tauri"
version = "0.1.2"
description = "A system alias manager built with Tauri v2"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
log = "0.4"
ureq = { version = "2", features = ["json"] }
semver = "1"
